edition = "2023";

package otterscale.network.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/otterscale/otterscale/api/network/v1;pb";

service NetworkService {
  rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse);
  rpc CreateNetwork(CreateNetworkRequest) returns (Network);
  rpc CreateIPRange(CreateIPRangeRequest) returns (Network.IPRange);
  rpc DeleteNetwork(DeleteNetworkRequest) returns (google.protobuf.Empty);
  rpc DeleteIPRange(DeleteIPRangeRequest) returns (google.protobuf.Empty);
  rpc UpdateFabric(UpdateFabricRequest) returns (Network.Fabric);
  rpc UpdateVLAN(UpdateVLANRequest) returns (Network.VLAN);
  rpc UpdateSubnet(UpdateSubnetRequest) returns (Network.Subnet);
  rpc UpdateIPRange(UpdateIPRangeRequest) returns (Network.IPRange);
}

message Network {
  message IPAddress {
    string type = 1;
    string ip = 2;
    string user = 3;
    string machine_id = 11;
    string node_type = 12;
    string hostname = 13;
  }
  message IPRange {
    int64 id = 1;
    string type = 2;
    string start_ip = 3;
    string end_ip = 4;
    string comment = 5;
  }
  message Statistics {
    int64 available = 1;
    int64 total = 2;
    string usage_percent = 3;
    string available_percent = 4;
  }
  message Fabric {
    int64 id = 1;
    string name = 2;
  }
  message VLAN {
    int64 id = 1;
    int64 vid = 2;
    string name = 3;
    int64 mtu = 4;
    string description = 5;
    bool dhcp_on = 6;
  }
  message Subnet {
    int64 id = 1;
    string name = 2;
    string cidr = 3;
    string gateway_ip = 4;
    repeated string dns_servers = 5;
    string description = 6;
    bool managed_allocation = 7;
    bool active_discovery = 8;
    bool allow_proxy_access = 9;
    bool allow_dns_resolution = 10;
    repeated IPAddress ip_addresses = 11;
    repeated IPRange ip_ranges = 12;
    Statistics statistics = 13;
  }
  Fabric fabric = 1;
  VLAN vlan = 2;
  Subnet subnet = 3;
}

message ListNetworksRequest {}

message ListNetworksResponse {
  repeated Network networks = 1;
}

message CreateNetworkRequest {
  string cidr = 1;
  string gateway_ip = 2;
  repeated string dns_servers = 3;
  bool dhcp_on = 11;
}

message CreateIPRangeRequest {
  int64 subnet_id = 1;
  string start_ip = 11;
  string end_ip = 12;
  string comment = 13;
}

message DeleteNetworkRequest {
  int64 id = 1;
}

message DeleteIPRangeRequest {
  int64 id = 1;
}

message UpdateFabricRequest {
  int64 id = 1;
  string name = 11;
}

message UpdateVLANRequest {
  int64 fabric_id = 1;
  int64 vid = 2;
  string name = 11;
  int64 mtu = 12;
  string description = 13;
  bool dhcp_on = 14;
}

message UpdateSubnetRequest {
  int64 id = 1;
  string name = 11;
  string cidr = 12;
  string gateway_ip = 13;
  repeated string dns_servers = 14;
  string description = 15;
  bool allow_dns_resolution = 16;
}

message UpdateIPRangeRequest {
  int64 id = 1;
  string start_ip = 11;
  string end_ip = 12;
  string comment = 13;
}
